<resources>
    <string name="app_name">Android POS</string>
    <string name="items">Items</string>
    <string name="sell">Sell</string>
    <string name="order_history">Order History</string>
    <string name="customers">Customers</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_item">Add Item Button</string>
    <string name="item_name">Item Name</string>
    <string name="demo_price">$100</string>
    <string name="price">Price</string>
    <string name="complete_order">Complete Order</string>
    <string name="add_customer">Add Customer</string>
    <string name="customer_name">Customer Name</string>
    <string name="phone">Phone Number</string>
    <string name="email">email</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="Grand_Total">Grand Total</string>
    <string name="Tax">Tax Amount</string>
</resources>
