<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vamshedhar.androidpos.activities.FinishOrderActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="Order Details:"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/customerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="10dp"
        android:text="Vamshedhar Reddy" />

    <TextView
        android:id="@+id/customerPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/customerName"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="14dp"
        android:text="+1 9809389877" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/customerName"
        android:layout_alignStart="@+id/customerName"
        android:layout_below="@+id/customerName"
        android:layout_marginTop="10dp"
        android:text="Order Items"
        android:textStyle="bold" />

    <Button
        android:id="@+id/confirmOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/confirm_order"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/confirmOrder"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginBottom="13dp"
        android:text="@string/Grand_Total"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/grandTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignEnd="@+id/customerPhone"
        android:layout_alignRight="@+id/customerPhone"
        android:text="$21.45"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginBottom="5dp"
        android:text="@string/Tax"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/taxAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignEnd="@+id/grandTotal"
        android:layout_alignRight="@+id/grandTotal"
        android:text="$1.45"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView8"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginBottom="5dp"
        android:text="Sub Total"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView10"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignEnd="@+id/customerPhone"
        android:layout_alignRight="@+id/customerPhone"
        android:text="$20.0"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/orderItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/textView10"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
